# tripass

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.bat  build.rs  build.sh  cli_flags.odin  debug.sh  genpass.odin  main.odin  ols.json  triwords.odin  win-build.bat
reference/: English-Three-Letter-Word-List.txt
src/: main.rs  passgen.rs  version.rs
src/passgen/: triwords.rs
