[package]
name = "tripass"
version = "0.3.3"
edition = "2024"
authors = ["Simon Rowe"]
repository = "https://github.com/wiremoons/tripass"
license = "MIT"
description = "Generate passwords based on a dictionary of three letter words."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimise for size.
lto = true      # Link time optimisations
panic = "abort" # removes the need for extra unwinding code

[dependencies]
chrono = "0.4.44"                                   # obtain date and time of build
colored = "3.1.1"                                   # coloured text output
clap = { version = "4.6.0", features = ["derive"] } # cli options parsing
rand = "0.10.1"
heck = "0.5.0"

[build-dependencies]
chrono = "0.4.44"       # obtain date and time of build
rustc_version = "0.4.1" # obtains 'rustc' version used for build